# graph-layout

./: .gitmodules  CMakeLists.txt  README.md  graph-layout-qml.qrc  graph-layout.pri  graph-layout.pro
.github/workflows/: build_linux.yml  build_windows.yml
include/: forcedgraphcalculator.h  graphcalculator.h  graphlayout.h  igraph.h
lib/: CMakeLists.txt
lib/GraphGeometry/: CMakeLists.txt
lib/kmisc/: CMakeLists.txt
lib/kmisc/kfunction/: .gitignore  kfunction.h
libs/: CMakeLists.txt
qml/GraphLayout/: qmldir
src/: forcedgraphcalculator.cpp  graph-layout.pro  graphcalculator.cpp  graphlayout.cpp
